@@ -41,7 +41,7 @@ export DEFS_FILE
 USE_SYNONYM_TYPE=1
 export USE_SYNONYM_TYPE
 
-LOAD_PROGRAM="${LOAD_PROGRAM} DOmgislim.sh DOpostprocess.py"
+LOAD_PROGRAM="${LOAD_PROGRAM} DOmgislim.sh DOgxdslim.sh DOpostprocess.py"
 RCD_FILE="DO.rcd"
 export LOAD_PROGRAM
 export RCD_FILE
@@ -86,3 +86,14 @@ DO_MGI_SLIM_FILE="${RUNTIME_DIR}/domgislim.txt"
 export DO_MGI_SLIM_FILE
 DO_MGI_SLIM_SANITY_FILE="${RUNTIME_DIR}/domgislimsanity.txt"
 export DO_MGI_SLIM_SANITY_FILE
+
+#
+# for doi.obo/subset: DO_GXD_slim
+# name of a domgislim.txt file that is generated by loadOBO.py/parseOBOFile()
+# see also: DOmgislim.config
+#
+DO_GXD_SLIM_FILE="${RUNTIME_DIR}/dogxdslim.txt"
+export DO_GXD_SLIM_FILE
+DO_GXD_SLIM_SANITY_FILE="${RUNTIME_DIR}/dogxdslimsanity.txt"
+export DO_GXD_SLIM_SANITY_FILE
+
