@@ -1,0 +1,27 @@
+#!/bin/csh -f
+
+#
+# Program: DOgxdslim.config
+#
+# Purpose:
+#
+#   Configuration file for Disease Ontology loading into MGI_Set/MGI_SetMember table (setload)
+#
+# History:
+#
+# 07/10/2019
+#	- TR13007/RNA Sequence project/added DO_GXD_slim to Disease Ontology
+#
+
+source ${SETLOAD}/Configuration
+
+setenv SETMODE		load
+setenv SETOUTPUTDIR	${RUNTIME_DIR}
+setenv SETDATADIR	${RUNTIME_DIR}
+setenv SETDATADIR	${RUNTIME_DIR}
+setenv SETINPUTFILE	${RUNTIME_DIR}/dogxdslim.txt
+setenv SETLOG		${RUNTIME_DIR}/dogxdslim.log
+setenv SETNAME		"DO_GXD_slim"
+setenv SETTYPE		"Vocabulary Term"
+setenv CREATEDBY	smb
+
