@@ -1,3 +1,9 @@
+TAG: vocload-6-0-14-3
+DATE: 07/10/2019
+STAFF: lec 
+CHANGES: 
+1) TR13007/RNA Sequence project/add DOgxdslim to Disease Ontology (DO)
+
 TAG: vocload-6-0-14-2
 DATE: 05/15/2019
 STAFF: lec 
